# telegram-ai-org

./: .coverage_e2e.json  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINDINGS.md  GEMINI.md  LICENSE  MANIFEST.in  PM봇_로그분석_보고서_20260324.md  README.md  ROADMAP.md  WEEKLY_REPORT_2026-03-10.md  agent_hints.yaml  cli.py  coverage_e2e.json  docker-compose.yml  improvement_thresholds.yaml  infra-baseline.yaml  main.py  orchestration.yaml  organizations.yaml  pyproject.toml  requirements-test.txt  run_e2e_loop.py  setup.cfg  setup.py  simulation_mode.py  trivy-scan-report.txt  workers.yaml  보안감사-수정완료-요약.md  시크릿_목록.md
.claude/: settings.local.json
.omc/: project-memory.json
.omx/: metrics.json
bots/: __init__.py  aiorg_design_bot.yaml  aiorg_engineering_bot.yaml  aiorg_growth_bot.yaml  aiorg_ops_bot.yaml  aiorg_pm_bot.yaml  aiorg_product_bot.yaml  aiorg_research_bot.yaml  analyst_bot.py  default_phases.yaml  dev_bot.py  dev_team.yaml  docs_bot.py  marketing_team.yaml
core/: __init__.py  agent_catalog.py  agent_persona_memory.py  artifact_indexer.py  artifact_pipeline.py  attachment_analysis.py  attachment_manager.py  autonomous_loop.py  bot_business_retro.py  bot_character_evolution.py  bot_commands.py  bot_dispatcher.py  bot_message_handler.py  builtin_surfaces.py  claim_manager.py  code_health.py  code_improvement_approval_store.py  collab_dispatcher.py  collab_request.py  collaboration_tracker.py  completion.py  confidence_scorer.py  constants.py  context_cache.py  context_db.py  context_window.py  cross_org_bridge.py  discussion.py  discussion_parser.py  dispatch_engine.py  display_limiter.py  diverge_converge.py  dynamic_team_builder.py  env_guard.py  eval_runner.py  feedback_loop_runner.py  global_context.py  goal_tracker.py  group_chat_hub.py  health_report_parser.py  (+70 more)
docs/: ARCHITECTURE_DESIGN.md  AUTONOMOUS_LOOP.md  CICD_SETUP.md  CI_CD_GUIDE.md  CI_CD_SETUP.md  CONTRIBUTING_초안.md  ENV_DEBUG_GUIDE.md  ENV_VARIABLES.md  MEMORY_ARCHITECTURE_DESIGN_v1.md  MEMORY_TIER_ARCHITECTURE.md  MarkdownV2_vs_HTML_비교표.md  OPENSOURCE_PLAN.md  PRD-storage-architecture-innovation.md  README_개편안.md  REFACTORING_PLAN.md  RELEASE_NOTES_v1.0.0.md  RESEARCH_STANDARDS.md  SKILLS_MCP_GUIDE.md  T-aiorg_pm_bot-367-selfcode-improver-analysis.md  agent-coordination-map.md  architecture-deep-analysis.md  architecture-diagram.py  autonomous-evolution.md  before_snapshot.md  bug-analysis-T-aiorg_pm_bot-629.md  bug-analysis-T-aiorg_pm_bot-633.md  business-report-guideline.md  business-report-quick-reference.md  design-baseline-guide.md  design-selfcode-improver-approval-gate.md  e2e_verification_report_T303.md  env_isolation_debug_guide.md  game-studios-analysis.md  gap-analysis-vs-single-claude.md  harness-upgrade-prd.md  improvement-plan.md  improvement-result.md  multibot_group_chat_gap_analysis.md  opensource_packaging_reference.md  ops-monitoring-guide-T311.md  (+20 more)
evals/: schema.json
goal_tracker/: __init__.py  action_parser.py  auto_register.py  dispatcher.py  goal_tracker_client.py  loop_runner.py  meeting_handler.py  multibot_meeting_handler.py  registrar.py  report_parser.py  router.py  state_machine.py
infra/: infra-baseline.yaml
migrations/: 001_add_goals_columns.sql
monitoring/: alert-rules.yaml
reports/: RCA_무한루프_20260324.md  TradingAgents_Research_Report_20260322.md  TradingAgents_comparison_single_vs_multiagent.md  coding_agent_market_2026_03.md  e2e-verification-T303-20260323.md  e2e_verification_20260323.md  e2e_verification_T303.md  e2e_verification_T303_20260322.md  e2e_verification_report_T303.md  multiagent_vs_single_verdict_20260323.md  pm_report_quality_diagnosis_20260323.md  research-report_multiagent-weaknesses.md  retro-gamestudios-comparison-2026-03-22.md  safe-coding-methodology-2026.md  tradingagents_phase1_competitive_analysis.md  tradingagents_phase2_positioning_strategy.md
scripts/: agent_monitor.py  appstore_weekly_checklist.py  arch_advisor.py  auto_improve_recent_conversations.py  bot_control.sh  bot_deploy_healthcheck.py  bot_manager.py  bot_watchdog.py  cleanup_tmux.py  create_release.sh  daily_ai_news.py  daily_goal_pipeline.py  daily_metrics.py  daily_retro.py  e2e_collab_discussion_test.py  e2e_full_suite.py  e2e_session_20260319.py  e2e_telegram_test.py  goal_tracker_stage_runner.py  health_check.py  install-daemon.sh  install_agents.sh  monthly_review.py  morning_goals.py  ops_rollout_monitor.py  pm_filter_ai_news.py  preflight_check.py  preflight_check.sh  register_crons.sh  request_restart.sh  restart_bots.sh  restart_watchdog.py  review_recent_conversations.py  routing_autoresearch.py  routing_eval.py  run_daily_ai_news.sh  run_daily_review_job.sh  run_harness_audit.py  run_self_improve_pipeline.py  session-stop.sh  (+15 more)
skills/: README.md  __init__.py
tasks/: e2e-architect-review.md  e2e-completion-report.md  e2e-comprehensive-plan.md  e2e-critic-review.md  lessons.md  next-session.md  priority-plan.md  retry-loop-fix-analysis.md  retry-loop-综合보고서.md  scheduler-relay-review.md  todo.md
telegram_ai_org/: __init__.py  __main__.py
tests/: test_agent_parser.py  test_approach_category_regression.py  test_artifact_indexer.py  test_attachment_artifact_pipeline.py  test_attachment_review_tools.py  test_auto_improvement_tools.py  test_auto_upload_fallback.py  test_autonomous_loop.py  test_base_runner.py  test_bot_business_retro.py  test_bot_commands.py  test_bot_message_handler.py  test_bot_performance.py  test_bug_fixes.py  test_bugfix_korean_collab.py  test_builtin_surfaces.py  test_claude_code_runner_limit_overrun.py  test_code_approval_gate_integration.py  test_code_approval_handler.py  test_code_improvement_approval_store.py  test_codex_runner.py  test_collab_auto_trigger.py  test_collab_dispatcher.py  test_collab_e2e.py  test_collab_mode.py  test_collab_request.py  test_collab_result_injection.py  test_completion.py  test_confidence_scorer.py  test_conflict_coordination.py  test_context_cache.py  test_context_db.py  (+96 more)
(+466 files in other folders)
