# =============================================================================
# pyproject.toml — PEP 517/518 빌드 시스템 + 패키지 메타데이터 (PEP 621)
#
# 현대 표준: pyproject.toml [project] 테이블이 primary source of truth
# 레거시 호환: setup.cfg [metadata]/[options] 병행 제공 (pip < 21.3, 구형 CI)
# 빌드 명령: python -m build --wheel --sdist
# 로컬 개발 설치: pip install -e .[dev]
# =============================================================================

[project]
name = "telegram-ai-org"
version = "0.1.0"
description = "AI organization on Telegram — PM bot coordinates AI teams with shared context"
readme = "README.md"
license = "MIT"
authors = [
    { name = "telegram-ai-org contributors" },
]
requires-python = ">=3.10"
keywords = ["telegram", "ai", "multi-agent", "llm", "bot", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # License classifier deprecated by PEP 639 — SPDX expression in `license = "MIT"` 사용
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-telegram-bot>=22.0",   # 22.6 installed (2026-03-26 기준)
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "typer>=0.9",
    "openai>=2.0",                 # 2.26 installed; 2.x API는 1.x와 호환 불가
    "anthropic>=0.80",             # 0.84 installed (2026-03-26 기준)
    "PyYAML>=6.0",
    "apscheduler>=3.10.0",
    "rank-bm25>=0.2",
    "mcp>=1.0",
    "claude-agent-sdk>=0.1.50",   # 0.1.50 = current latest
]

[project.optional-dependencies]
# claude-code 엔진: npm install -g @anthropic-ai/claude-code
claude = []
# codex 엔진: npm install -g @openai/codex
codex = []
# gemini-cli 엔진: npm install -g @google/gemini-cli
gemini = [
    "google-genai>=1.0",
]
all = [
    "google-genai>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "ruff>=0.1",
    "flake8>=7.0",
    "mypy>=1.10",
    "black>=23.0",
    "build>=1.0",
    "twine>=5.0",
    "google-genai>=1.0",
]

[project.scripts]
# PyPI 공식 진입점
telegram-ai-org = "telegram_ai_org.__main__:main"
# PM 봇 실행 단축 별칭
aiorg-pm = "cli:pm"
# 워커 봇 실행: aiorg-worker --name <worker_name>
aiorg-worker = "core.run_worker:main"
# 오케스트레이션 CLI
aiorg-cli = "tools.orchestration_cli:main"

[project.urls]
Homepage = "https://github.com/dragon1086/aimesh"
Repository = "https://github.com/dragon1086/aimesh"
Issues = "https://github.com/dragon1086/aimesh/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 루트 레벨 모듈 (cli.py, main.py 등) — entry_point 참조용
py-modules = ["cli", "main", "simulation_mode"]

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_ai_org*", "core*", "tools*", "skills*"]
exclude = [".venv*", ".worktrees*", "tests*", "dist*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.toml", "*.md", "*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (no external engine required)",
    "unit: pure unit tests with no external dependencies",
    "integration: integration tests requiring real CLI binaries (claude-code/codex/gemini-cli)",
    "slow: slow-running tests (timeout > 30s)",
]
filterwarnings = [
    # Python 3.14 GC 레벨에서 AsyncMock 미수거 경고 — 테스트 결과에 영향 없음
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # google.genai 라이브러리 내부 DeprecationWarning (_UnionGenericAlias, Python 3.17 제거 예정)
    "ignore::DeprecationWarning:google",
]

[tool.mypy]
python_version = "3.10"
files = ["cli.py", "main.py", "simulation_mode.py", "core", "telegram_ai_org", "tools"]
exclude = ["tests", ".venv", ".worktrees", "build", "dist"]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
show_error_codes = true
pretty = true
