# =============================================================================
# setup.cfg — 패키지 메타데이터 및 설치 설정 (레거시 호환 병행 제공)
#
# ⚠ 우선순위: pyproject.toml [project] > setup.cfg [metadata]
#   - 현대 pip/setuptools (>= 61): pyproject.toml [project] 테이블을 primary로 사용
#   - 레거시 도구 (pip < 21.3, 구형 CI, setup.py 직접 실행):
#     setup.cfg [metadata] + [options] 를 fallback으로 사용
#
# build-system 설정: pyproject.toml [build-system] 섹션
# 빌드 명령: python -m build --wheel --sdist
# 로컬 설치: pip install -e .
# =============================================================================

# ─── 패키지 메타데이터 ────────────────────────────────────────────────────────
[metadata]
name = telegram-ai-org
version = 0.1.0
description = AI organization on Telegram — PM bot coordinates AI teams with shared context
long_description = file: README.md
long_description_content_type = text/markdown
author = telegram-ai-org contributors
license = MIT
keywords = telegram, ai, multi-agent, llm, bot, orchestration
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Communications :: Chat
    Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
    Homepage = https://github.com/dragon1086/aimesh
    Repository = https://github.com/dragon1086/aimesh
    Issues = https://github.com/dragon1086/aimesh/issues
python_requires = >=3.11

# ─── 패키지 탐색 및 의존성 ────────────────────────────────────────────────────
[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    python-telegram-bot>=20.0
    pydantic>=2.0
    aiosqlite>=0.19
    httpx>=0.25
    python-dotenv>=1.0
    loguru>=0.7
    typer>=0.9
    openai>=1.0
    anthropic>=0.20
    PyYAML>=6.0
    apscheduler>=3.10.0
    rank-bm25>=0.2
    mcp>=1.0
    claude-agent-sdk>=0.1.50

[options.packages.find]
where = .
include =
    telegram_ai_org*
    core*
    tools*
    skills*
exclude =
    .venv*
    .worktrees*
    tests*
    dist*

# ─── 진입점 (CLI 명령어) ──────────────────────────────────────────────────────
[options.entry_points]
console_scripts =
    # PyPI 공식 진입점
    telegram-ai-org = telegram_ai_org.__main__:main
    # PM 봇 실행 (단축 별칭)
    aiorg-pm = cli:pm
    # 워커 봇 실행: aiorg-worker --name <worker_name>
    aiorg-worker = core.run_worker:main
    # 오케스트레이션 CLI
    aiorg-cli = tools.orchestration_cli:main

# ─── 선택적 의존성 (엔진별) ───────────────────────────────────────────────────
[options.extras_require]
# claude-code 엔진: claude CLI는 npm으로 별도 설치 (pip 의존성 없음)
#   설치: npm install -g @anthropic-ai/claude-code
claude =
# codex 엔진: codex CLI는 npm으로 별도 설치 (pip 의존성 없음)
#   설치: npm install -g @openai/codex
codex =
# gemini-cli 엔진: python SDK + CLI 별도 설치
#   CLI: npm install -g @google/gemini-cli
gemini =
    google-genai>=1.0
# 전체 엔진 (gemini SDK 포함)
all =
    google-genai>=1.0
# 테스트 의존성
test =
    pytest>=7.0
    pytest-asyncio>=0.21
    pytest-mock>=3.0
# 개발 도구 전체
dev =
    pytest>=7.0
    pytest-asyncio>=0.21
    pytest-mock>=3.0
    ruff>=0.1
    black>=23.0
    build>=1.0
    twine>=5.0
    google-genai>=1.0

# ─── 패키지 데이터 (비-Python 파일) ──────────────────────────────────────────
[options.package_data]
* =
    *.yaml
    *.toml
    *.md
    *.json
